--- a/sunflower-admin/.settings/org.eclipse.wst.common.component
+++ b/sunflower-admin/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,12 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="sunflower-service-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sunflower-service/sunflower-service">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="sunflower-config-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sunflower-config/sunflower-config">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="sunflower-admin"/>
         <property name="java-output-path" value="/sunflower-admin/target/classes"/>
     </wb-module>
