SPRING MVC 框架添加
SPRING MVC 框架添加

Signed-off-by: 960339491 <960339491@qq.com>

--- a/sunflower-admin/.settings/org.eclipse.wst.common.component
+++ b/sunflower-admin/.settings/org.eclipse.wst.common.component
@@ -10,6 +10,9 @@
         <dependent-module archiveName="sunflower-config-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sunflower-config/sunflower-config">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/resource/sunflower-framework/sunflower-framework">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="sunflower-admin"/>
         <property name="java-output-path" value="/sunflower-admin/target/classes"/>
     </wb-module>
